# CIN2_regression

./: .gitignore  README.md  pyproject.toml
docs/: classification_cli.md
src/: aggregate_feats.py  classify.py  extract_feats.py  feature_interactions.py  norm.py  select_features.py  utils.py
src/classification/: autogluon_wrapper.py  feature_maps.py  metrics.py  shap_heuristic.py  tabpfn_finetune.py  utils.py
src/features/: epithelial_structure_feats.py  immune_feats.py  neoplastic_nuclei_feats.py
src/plot/: beeswarm.py  metrics.py
