[project]
name = "cin2-regression"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "autogluon-tabular[catboost,fastai,lightgbm,mitra,tabicl,tabpfn]>=1.4.0",
    "histolytics>=0.2.2",
    "openpyxl>=3.1.5",
    "openslide-python>=1.4.2",
    "overrides>=7.7.0",
    "ray>=2.10.0,<2.45.0",
    "seaborn>=0.13.2",
    "shap>=0.48.0",
    "shapiq>=1.3.1",
    "tabpfn>=2.1.3",
    "tabpfn-extensions",
]

[tool.uv.sources]
tabpfn-extensions = { git = "https://github.com/priorlabs/tabpfn-extensions.git" }

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
]
